--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.1.4",
     "react": "^18",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18",
     "sass": "^1.72.0"
   },
