--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev-2": "next dev -H 192.168.1.8",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
