--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "next": "14.1.4",
+    "openssl": "^2.0.0",
     "react": "^18",
     "react-calendar": "^4.8.0",
     "react-dom": "^18",
